--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "koa2-API-scaffold",
+  "name": "diary-server",
   "version": "1.0.0",
-  "description": "Koa2 RESTful API 服务器的脚手架",
-  "author": "轶哥 <a@wyr.me>",
+  "description": "多功能日记",
+  "author": "Jon <czyjmu@163.com>",
   "scripts": {
     "start": "gulp nodemon",
     "dev": "gulp",
@@ -10,17 +10,24 @@
     "production": "node dist/app.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
     "koa-compose": "^4.0.0",
-    "koa-jwt": "^3.2.2",
+    "koa-jwt": "^3.3.1",
     "koa-router": "^7.2.1",
+    "koa-session": "^5.8.1",
     "koa-static2": "^0.1.8",
+    "mysql2": "^1.5.3",
     "nodemailer": "^4.3.0",
     "promise-mysql": "^3.1.1",
+    "qiniu": "^7.1.7",
     "require-directory": "^2.1.1",
-    "sequelize": "^4.16.1"
+    "sequelize": "^4.16.1",
+    "svg-captcha": "^1.3.11",
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
